--- a/web/package.json
+++ b/web/package.json
@@ -16,18 +16,12 @@
     "postcss": "^8.4.20",
     "svelte": "^3.54.0",
     "svelte-check": "^2.10.0",
+    "svelte-system-info": "^1.0.0",
+    "svelte-use-click-outside": "^1.0.0",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
     "vite": "^4.0.0"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.2.1",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "svelte-system-info": "^1.0.0",
-    "svelte-use-click-outside": "^1.0.0"
   }
 }
