--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@tsconfig/svelte": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "semver-compare": "^1.0.0",
     "svelte": "^3.54.0",
     "svelte-check": "^2.10.0",
     "svelte-system-info": "^1.0.0",
