--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "semver-compare": "^1.0.0",
     "svelte": "^3.54.0",
     "svelte-check": "^2.10.0",
+    "svelte-spa-router": "^3.3.0",
     "svelte-system-info": "^1.0.0",
     "svelte-use-click-outside": "^1.0.0",
     "tailwindcss": "^3.2.4",
